# dmichaels-utils

./: .gitignore  .gitleaks.toml  CHANGELOG.rst  pyproject.toml
.github/workflows/: main-publish.yml-inactive  main.yml
src/dmichaels_utils/: argv.py  aws_ecs.py  aws_env.install.bash  aws_env.py  aws_url_accounting.py  aws_url_accounting_uniques.py  dictionary_parented.py  dictionary_print_utils.py  dictionary_utils.py  hms_config.py  version_utils.py
src/dmichaels_utils/aws/codebuild/: utils.py
src/dmichaels_utils/backup/: hms_config_backup.py
src/dmichaels_utils/cli/: crypt_cli.py
src/dmichaels_utils/config/: config.py  config_basic.py  config_cli.py  config_output.py  config_with_aws_macros.py  config_with_secrets.py
src/dmichaels_utils/dev/: es-results.py  recent_files_summary.py  recent_files_summary_old.py  recent_released_files.py  work.py
src/dmichaels_utils/portal/: indexing_status.py  portal_envs.py  portal_files.py  portal_generate_access_key.py  portal_item_conflicts.py  portal_permissions.py  portal_read.py  portal_reindex_items.py  portal_simple_update.py  portal_user_update.py  portal_users.py  portal_utils.py  portal_validation_errors.py  portal_write.py  view_portal_object.py
src/dmichaels_utils/portal/oneoff/: portal_add_consortia_to_items.py  portal_items_without_consortia.py  portal_permissions_debugging.py  portal_submitted_file_summary.py  sanity_check_smaht_users_spreadsheet.py
tests/: test_arg_utils.py  test_config.py  test_dictionary_utils.py  test_hms_config.py  test_json_utils.py
